# fisilti

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  start_dev.bat
.cargo/: config.toml
docs/: index.html
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: collab.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  collab_server.rs  corrections.rs  edge_tts.rs  keyboard_hook.rs  lib.rs  main.rs  model.rs  settings.rs  text.rs  transcription.rs  uia_highlight.rs
src-tauri/src/commands/: audio.rs  corrections.rs  history.rs  input.rs  mod.rs  model.rs  settings.rs  transcription.rs
src/components/: CloudEnginesPanel.tsx  CollabPanel.tsx  ColorsPanel.tsx  HistoryPanel.tsx  LearningPanel.tsx  ModelManager.tsx  OverlayBar.tsx  RecordButton.tsx  SettingsApp.tsx  SettingsPanel.tsx  StatsPanel.tsx  StatusDot.tsx  TTSPanel.tsx  TitleBar.tsx  TranscriptDisplay.tsx  WaveLine.tsx  WaveformVisualizer.tsx
src/hooks/: useTranscription.ts
src/lib/: azureSpeechService.ts  browserAudioMonitor.ts  deepgramService.ts  edgeTTSService.ts  googleCloudSpeechService.ts  languageUtils.ts  peerService.ts  settingsUtils.ts  sileroVadService.ts  soundEffects.ts  streamCallbacks.ts  tauri-commands.ts  themeEngine.ts  themes.ts  ttsService.ts  wakeWordListener.ts  webSpeechService.ts
src/stores/: collabStore.ts  recordingStore.ts  settingsStore.ts  transcriptionStore.ts  ttsStore.ts  usageStore.ts
