[package]
name = "fisilti"
version = "0.1.0"
description = "Profesyonel Turkce Ses-Yazi Donusturucu"
authors = ["hamsi"]
edition = "2021"

[lib]
name = "fisilti_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
rubato = "0.16"
rustfft = "6"
enigo = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
hound = "3.5"
futures-util = "0.3"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
dirs = "6"
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
arboard = "3"
whisper-rs = "0.15"
raw-window-handle = "0.6"
tauri-plugin-autostart = "2"
