[package]
name = "fisilti"
version = "2.0.0"
description = "Profesyonel Turkce Ses-Yazi Donusturucu"
authors = ["hamsi"]
edition = "2021"

[lib]
name = "fisilti_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
rubato = "0.16"
rustfft = "6"
enigo = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
hound = "3.5"
futures-util = "0.3"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
dirs = "6"
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
arboard = "3"
whisper-rs = "0.15"
raw-window-handle = "0.6"
tauri-plugin-autostart = "2"
nnnoiseless = "0.5.2"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
base64 = "0.22"
sha2 = "0.10"
native-tls = "0.2"
regex = "1"
chrono = "0.4"
tauri-plugin-notification = "2"
mdns-sd = "0.11"
hostname = "0.4"
axum = "0.8"
local-ip-address = "0.6"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_Properties",
    "Win32_Security",
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
